DD-41005: Integration test added with real artemis container (#9)
Uses testcontainer library to spin up artemis container 

The library and test is opinionated around how path parameters are resolved (using swagger open api spec).