@@ -11,6 +11,7 @@ import static org.mockito.Mockito.when;
 import uk.gov.hmcts.cp.filter.audit.util.ClasspathResourceLoader;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.Map;
@@ -19,6 +20,7 @@ import java.util.regex.Pattern;
 
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
 import io.swagger.v3.oas.models.PathItem;
 import io.swagger.v3.oas.models.Paths;
 import io.swagger.v3.oas.models.parameters.Parameter;
@@ -96,7 +98,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final OpenAPI openAPI = mock(OpenAPI.class);
         when(openAPI.getPaths()).thenReturn(null);
@@ -114,21 +116,23 @@ class OpenApiSpecificationParserTest {
     }
 
     @Test
-    @DisplayName("Adds path patterns for multiple valid paths")
+    @DisplayName("Adds path patterns for multiple valid paths and at multiple levels")
     void addsPathPatternsForMultipleValidPaths() throws Exception {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final Parameter pathParam = new Parameter().in(API_PATH).name("id");
+        // path params defined at PathItem level
         final PathItem pathItem1 = new PathItem().parameters(List.of(pathParam));
-        final PathItem pathItem2 = new PathItem().parameters(List.of(pathParam));
+        // path params defined at Operation level
+        final PathItem pathItem2 = new PathItem().get(new Operation().parameters(List.of(pathParam)));
 
         final Paths paths = new Paths();// NOPMD UseInterfaceType
 
         paths.addPathItem(API_RESOURCE_PATH, pathItem1);
-        paths.addPathItem("/api/other-resource/{id}", pathItem2);
+        paths.addPathItem("/api/other-resource/{another-id}", pathItem2);
 
         final OpenAPI openAPI = mock(OpenAPI.class);
         when(openAPI.getPaths()).thenReturn(paths);
@@ -143,9 +147,9 @@ class OpenApiSpecificationParserTest {
 
         final Map<String, Pattern> patterns = parser.getPathPatterns();
         assertThat(patterns).containsKey(API_RESOURCE_PATH);
-        assertThat(patterns).containsKey("/api/other-resource/{id}");
+        assertThat(patterns).containsKey("/api/other-resource/{another-id}");
         assertThat(patterns.get(API_RESOURCE_PATH).pattern()).isEqualTo("/api/resource/([^/]+)");
-        assertThat(patterns.get("/api/other-resource/{id}").pattern()).isEqualTo("/api/other-resource/([^/]+)");
+        assertThat(patterns.get("/api/other-resource/{another-id}").pattern()).isEqualTo("/api/other-resource/([^/]+)");
     }
 
     @Test
@@ -154,7 +158,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final Parameter queryParam = new Parameter().in("query").name("q");
         final PathItem pathItem = new PathItem().parameters(List.of(queryParam));
@@ -181,7 +185,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final PathItem pathItem = new PathItem().parameters(null);
         final Paths paths = new Paths();// NOPMD UseInterfaceType
@@ -207,7 +211,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final Parameter pathParam1 = new Parameter().in(API_PATH).name("id");
         final Parameter pathParam2 = new Parameter().in(API_PATH).name("subId");
@@ -237,7 +241,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final Paths paths = new Paths();// NOPMD UseInterfaceType
         paths.addPathItem(API_RESOURCE_PATH, null);
@@ -262,7 +266,7 @@ class OpenApiSpecificationParserTest {
         final ClasspathResourceLoader resourceLoader = mock(ClasspathResourceLoader.class);
         final Resource resource = mock(Resource.class);
         when(resourceLoader.loadFilesByPattern(anyString())).thenReturn(Optional.of(resource));
-        when(resource.getURL()).thenReturn(new URL(FILE_DUMMY_PATH));
+        when(resource.getURL()).thenReturn(new URI(FILE_DUMMY_PATH).toURL());
 
         final Parameter pathParam = new Parameter().in("path").name("id");
         final Parameter queryParam = new Parameter().in("query").name("q");
